--- a/MM Purchase/Serecns/Custom View/PurchaseTableViewCell.xib
+++ b/MM Purchase/Serecns/Custom View/PurchaseTableViewCell.xib
@@ -21,28 +21,29 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rightMark" translatesAutoresizingMaskIntoConstraints="NO" id="qt2-5N-8lD">
-                        <rect key="frame" x="10" y="8" width="18" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="18" id="GJx-F6-yCw"/>
-                            <constraint firstAttribute="height" constant="18" id="i5l-PO-Gqo"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured item no 1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytm-Nu-feq">
-                        <rect key="frame" x="38" y="7.5" width="272" height="19.5"/>
-                        <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="16"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sC5-eu-y1p">
+                        <rect key="frame" x="76" y="8" width="168" height="18"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rightMark" translatesAutoresizingMaskIntoConstraints="NO" id="qt2-5N-8lD">
+                                <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="18" id="GJx-F6-yCw"/>
+                                    <constraint firstAttribute="height" constant="18" id="i5l-PO-Gqo"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured item no 1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytm-Nu-feq">
+                                <rect key="frame" x="28" y="0.0" width="140" height="18"/>
+                                <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <color key="backgroundColor" red="0.01176470588" green="0.078431372550000003" blue="0.16078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="Ytm-Nu-feq" firstAttribute="leading" secondItem="qt2-5N-8lD" secondAttribute="trailing" constant="10" id="IHE-aL-aNS"/>
-                    <constraint firstItem="qt2-5N-8lD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="MYW-eZ-0l1"/>
-                    <constraint firstAttribute="bottom" secondItem="qt2-5N-8lD" secondAttribute="bottom" constant="8" id="OUX-1W-kOh"/>
-                    <constraint firstItem="Ytm-Nu-feq" firstAttribute="centerY" secondItem="qt2-5N-8lD" secondAttribute="centerY" id="VgG-wL-aB3"/>
-                    <constraint firstItem="qt2-5N-8lD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="YY3-45-MFm"/>
-                    <constraint firstAttribute="trailing" secondItem="Ytm-Nu-feq" secondAttribute="trailing" constant="10" id="g5O-JM-hai"/>
+                    <constraint firstItem="sC5-eu-y1p" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Cao-va-0Zj"/>
+                    <constraint firstItem="sC5-eu-y1p" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SEx-ae-apa"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
